# Andrey-Karpathy-Lessons

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
Lesson 1. Micrograd/: Makefile  README.md  micrograd_lecture_first_half_roughly.ipynb  pyproject.toml  reimplement_micrograd_lecture_first_half_roughly.ipynb
Lesson 2. LLMCompression/: .gitignore  01_quantization_qat.ipynb  02_quantization_ptq_weight_only.ipynb  03_quantization_ptq_weight_activation.ipynb  04_quantization_ptq_kv_cache.ipynb  05_pruning_unstructured.ipynb  06_pruning_structured.ipynb  07_pruning_semi_structured.ipynb  08_distillation_black_box.ipynb  09_distillation_white_box.ipynb  10_low_rank_factorization.ipynb  11_mixture_of_experts.ipynb  12_sota_2026_advancements.ipynb  Makefile  README.md  REFACTORING_COMPLETE.md  analyze.py  chat.py  compression_step_1.ipynb  compression_step_10_distillation.ipynb  compression_step_11_mixed_precision.ipynb  compression_step_12_wanda_pruning.ipynb  compression_step_13_smoothquant.ipynb  compression_step_14_asvd.ipynb  compression_step_15_llama_dual_track.ipynb  compression_step_16_kv_cache.ipynb  compression_step_2.ipynb  compression_step_3.ipynb  compression_step_4.ipynb  compression_step_5.ipynb  compression_step_5_lora_fine_tuning.ipynb  compression_step_6_svd_decomposition.ipynb  compression_step_7_pruning.ipynb  compression_step_8_awq_scaling.ipynb  compression_step_9_nm_sparsity.ipynb  generate.py  pyproject.toml  train.py
Lesson 2. LLMCompression/nanoGPT-lab/: REFACTORING.md  analyze.py  train.py
Lesson 2. LLMCompression/src/: model.py
(+35 files in other folders)
